--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-[] Add storage extension (to use Redis for as session.storage, example);
 [] Change gateway, instead using only queues, use events too;
 [] Update docs;
+[] update docs with external storage
