--- a/TODO
+++ b/TODO
@@ -1,4 +1,12 @@
-[] Change gateway, instead using only queues, use events too;
 [] Update docs;
 [] Update docs with external storage;
 [] Add session expiration time in StorageData and to bot settings;
+
+2. change focus (dialog maker)
+4. multi-processes data
+    - separate state from data
+    - save state hash in data
+    - save progress separatedely in data
+    - use hash to save state in data (to not over save)
+    - save last worker, if id != then should pull data again, otherwise keep data
+5. split functionalities (dialog maker, message sender)
